INCLUDE(BuildPlugin)
set(Python_ADDITIONAL_VERSIONS 3.4)
find_package(PythonLibs 3.4 REQUIRED)
find_package(PythonQt)
if(PythonQt_FOUND)
  message(STATUS "PythonQT found:"${PYTHONQT_LIBRARY_DEBUG})
else(PythonQT_FOUND)
  message(FATAL_ERROR "PythonQT is not found")
endif(PythonQT_FOUND)
#message(FATAL_ERROR ${PYTHONQT_QTALL_LIBRARY_DEBUG})
  INCLUDE_DIRECTORIES(${PYTHONQT_INCLUDE_DIR} ${PYTHON_INCLUDE_DIR})
#    set(PYTHON_LIBRARIES /usr/lib/x86_64-linux-gnu/libpython3.4m.a)
  LINK_LIBRARIES(${PYTHONQT_LIBRARY_DEBUG} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${PYTHON_LIBRARIES} ${PYTHONQT_QTALL_LIBRARY_DEBUG} -lpthread)
  BUILD_PLUGIN(python_runner python_runner.cpp python_runner.h MOCFILES python_runner.h  EMBEDDED_RESOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.png")
#/usr/lib/x86_64-linux-gnu/libQtSvg.so
